# first-step

./: Classes.py  coffetime.py  cuboid.py  data_handling.py  drzewo.txt  funkcje.py  hackerrank.py  hangman.py  kolkoikrzyzyk.py  leetcode.py  mini_proj.py  names.csv  names.txt  practice_listcomp.py  pyproject.toml  pypy.py  pysnake.py  python.py  randomshit.py  rock_paper_scissors.py  sanke.py  studentsgroup.py  ternary_operator.py  text.txt  wordsforhangman.txt  zadanie.py
projekt_new/: exercise2.py
projekt_new/exercise1/: exercise1.py
