[tool.poetry]
name = "first-step"
version = "0.1.0"
description = ""
authors = ["ja"]
license = "ja"
readme = "README.md"
packages = [{include = "first_step"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
django = "^4.1.5"
pygame = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
